[feat] 新增command检测类型

--- a/conf/healthCheck.ini
+++ b/conf/healthCheck.ini
@@ -3,7 +3,7 @@ command=/usr/bin/python3 /etc/supervisord.d/scripts/healthCheck
 process_name=%(program_name)s
 numprocs=1
 directory=/etc/supervisord.d/scripts/
-autostart=true
+autostart=false
 startsecs=2
 startretries=5
 autorestart=true
